--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="phone-wrapper">
+    <div class="phone">
       <canvas id="snakeCanvas"></canvas>
     </div>
   </body>
